--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
         <h1>
 <a id="sinuscor" class="anchor" href="#sinuscor" aria-hidden="true"><span class="octicon octicon-link"></span></a>SinusCor</h1>
 
-<p><img src="images/sinuscor.png" alt="Tachogram"><br/>
 
 SinusCor is an advanved tool for
 <a href="http://www.ncbi.nlm.nih.gov/pubmed/8598068">Heart Rate Variability</a> analysis distributed
@@ -75,11 +74,6 @@ machine together with the
 <h3>
 <a id="tutorial-videos" class="anchor" href="#tutorial-videos" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tutorial Videos</h3>
 
-<p>For more information in how to use SinusCor, please watch the following tutorial
-<a href="www.google.com">video</a>.</p>
-
-
-
 <h4>
 <a id="bugs" class="anchor" href="#bugs" aria-hidden="true"><span class="octicon octicon-link"></span></a>Bugs</h4>
 
@@ -91,7 +85,7 @@ and the Bug will be fixed as soon as possible.</p>
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Sinuscor maintained by <a href="https://github.com/RhenanBartels">RhenanBartels</a></p>
+        <p class="copyright">hrrpt maintained by <a href="https://github.com/RhenanBartels">RhenanBartels</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
