Some index enhancements

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a id="sinuscor" class="anchor" href="#sinuscor" aria-hidden="true"><span class="octicon octicon-link"></span></a>SinusCor</h1>
+<a id="sinuscor" class="anchor" href="#sinuscor" aria-hidden="true"><span class="octicon octicon-link"></span></a>HRRpt</h1>
 
 
 SinusCor is an advanved tool for
