Almost empty page

--- a/index.html
+++ b/index.html
@@ -36,46 +36,7 @@
 <a id="sinuscor" class="anchor" href="#sinuscor" aria-hidden="true"><span class="octicon octicon-link"></span></a>HRRpt</h1>
 
 
-SinusCor is an advanved tool for
-<a href="http://www.ncbi.nlm.nih.gov/pubmed/8598068">Heart Rate Variability</a> analysis distributed
-under a freeware license, which means you can download and share without any
-payment. <br/>
-Along with classical indexes, SinusCor also allows you to analyze
-non stationary HRV signals, like those recorded during an exercise bout.</p>
-
-<p>The following figure illustrates a non stationary RRi example:</p>
-
-<p><img src="Figures/hrrpt.png" alt="Tachogram"></p>
-
-<h2>
-<a id="instalation" class="anchor" href="#instalation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Instalation</h2>
-
-<p>To use SinusCor you need to download the .zip or tar.gz files above and save it in
-a directory of your choice and decompress it.<br/> The code was developed using
-<a href="http://www.mathworks.com/">Matlab</a>, therefore you need Matlab installed in your
-machine together with the
-<a href="http://www.mathworks.com/products/signal/?s_tid=srchtitle">Signal Processing Toolbox</a>. Open Matlab and than <a href="http://www.mathworks.com/help/matlab/matlab_env/files-and-folders-that-matlab-accesses.html">change the working directory</a> to the one you choosed to save SinusCor. Now just type SinusCor in the Command Window and the softwre will be launched.</p>
-
-<h4>
-<a id="requirements" class="anchor" href="#requirements" aria-hidden="true"><span class="octicon octicon-link"></span></a>Requirements</h4>
-
-<ul>
-<li>Matlab version &gt;= 7.9.0.529 (R2009b)</li>
-<li>Signal Processing Toolbox</li>
-</ul>
-
-<h4>
-<a id="platform" class="anchor" href="#platform" aria-hidden="true"><span class="octicon octicon-link"></span></a>Platforms</h4>
-
-<ul>
-
-<li>Window, MacOS, Linux</li>
-</ul>
-<h3>
-<a id="tutorial-videos" class="anchor" href="#tutorial-videos" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tutorial Videos</h3>
-
-<h4>
-<a id="bugs" class="anchor" href="#bugs" aria-hidden="true"><span class="octicon octicon-link"></span></a>Bugs</h4>
+<h4><a id="bugs" class="anchor" href="#bugs" aria-hidden="true"><span class="octicon octicon-link"></span></a>Bugs</h4>
 
 <p>If you find any bug, please send an email to <a href="mailto:rhenan.bartels@gmail.com">rhenan.bartels@gmail.com</a>
 and the Bug will be fixed as soon as possible.</p>
