--- a/index.html
+++ b/index.html
@@ -36,8 +36,15 @@
 <a id="sinuscor" class="anchor" href="#sinuscor" aria-hidden="true"><span class="octicon octicon-link"></span></a>HRRpt</h1>
 
 
-<h4><a id="bugs" class="anchor" href="#bugs" aria-hidden="true"><span class="octicon octicon-link"></span></a>Bugs</h4>
 
+<p><img src="Figures/hrrpt.png" alt="hrrpt"></p>
+
+
+<h4><a id="bugs" class="anchor" href="#bugs" aria-hidden="true"><span class="octicon octicon-link"></span></a>In action</h4>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/L3d-7TdIRqA" frameborder="0" allowfullscreen></iframe>
+
+
+<h4><a id="bugs" class="anchor" href="#bugs" aria-hidden="true"><span class="octicon octicon-link"></span></a>Bugs</h4>
 <p>If you find any bug, please send an email to <a href="mailto:rhenan.bartels@gmail.com">rhenan.bartels@gmail.com</a>
 and the Bug will be fixed as soon as possible.</p>
       </section>
