--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 
 
 <h4><a id="bugs" class="anchor" href="#bugs" aria-hidden="true"><span class="octicon octicon-link"></span></a>In action</h4>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/L3d-7TdIRqA" frameborder="0" allowfullscreen></iframe>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/YS0NM4SW3yc" frameborder="0" allowfullscreen></iframe>
 
 
 <h4><a id="bugs" class="anchor" href="#bugs" aria-hidden="true"><span class="octicon octicon-link"></span></a>Bugs</h4>
