Lower user name

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/RhenanBartels/hrrpt">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/rhenanbartels/hrrpt">View on GitHub</a>
 
           <h1 id="project_title">HRRpt</h1>
           <h2 id="project_tagline">Tool for heart rate recovery
               fast-to-slow phase transition calculation</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/RhenanBartels/hrrpt/zipball/codes">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/RhenanBartels/hrrpt/tarball/codes">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/rhenanbartels/hrrpt/zipball/codes">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/rhenanbartels/hrrpt/tarball/codes">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
